<resources>
    <!-- Entire App -->
    <string name="app_name">Flashcards</string>
    <string name="new_line">/nl</string>
    <string name="not_working">Not working yet...</string>

    <!-- Menu -->
    <string name="menu_Flashcards">Flashcards</string>
    <string name="menu_NewCards">New File</string>
    <string name="menu_OldCards">Load File</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Help">Help</string>
    <string name="menu_Edit">Edit File</string>


    <!-- Main Activity -->
    <string name="textViewTitle_text">Flashcards</string>
    <string name="textViewOutput_text">Please select your file \n(use &amp; to split up each word and definition).
    </string>
    <string name="flipFlashcard_text">Flip Flashcard</string>
    <string name="newFlashcard_text">New Flashcard</string>
    <string name="selectFile_text">Select File</string>
    <string name="settingsBtn_description">Setting Button</string>
    <string name="themeButton">Change Theme</string>
    <string name="changeFlashcardFlipper">Flip All Flashcards</string>
    <string name="title_activity_settings">Settings</string>
    <string name="card_front">Front of flashcard</string>
    <string name="card_back">Back of flashcard</string>

    <!-- Flashcard Maker -->
    <string name="noFileSelected_text">Please Select a file</string>
    <string name="termHint">Term</string>
    <string name="defHint">Definition</string>
    <string name="buttonPrevious_text">Previous</string>
    <string name="buttonNext_text">Next</string>
    <string name="flashcardNumber">1</string>
    <string name="flashcardFile">The Text File:</string>

    <!-- Settings Activity -->
    <string name="setting_Theme">Change Theme</string>
    <string-array name="setting_ThemeSpinner">
        <item>Default</item>
        <item>Dark</item>
        <item>Night</item>
        <item>White (beta)</item>
    </string-array>
    <string name="setting_Flipper">Flip All Flashcards</string>
    <string name="setting_order">Change Display Order</string>
    <string-array name="setting_OrderSpinner">
        <item>Random</item>
        <item>File Order</item>
    </string-array>

    <!-- Help Activity -->
    <string name="webviewURL">https://github.com/Robert3141/Flashcards-App/wiki</string>
</resources>
