<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/menuActivityFlashcard"
              android:title="@string/menu_Flashcards"
              android:onClick="startMain"
              android:icon="@drawable/baseline_filter_none_white_48"/>

        <item android:id="@+id/menuActivityNewCards"
              android:title="@string/menu_NewCards"
              android:onClick="startNewCards"
              android:icon="@drawable/baseline_library_add_white_48" />

        <item android:id="@+id/menuActivitySettings"
              android:title="@string/menu_Settings"
              android:onClick="startSettings"
              android:icon="@drawable/baseline_settings_white_48"/>

        <item android:id="@+id/menuActivityHelp"
              android:title="@string/menu_Help"
              android:onClick="startHelp"
              android:icon="@drawable/baseline_help_white_48" />

    </group>
</menu>