<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout"
                                        xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fitsSystemWindows="true"
                                        tools:context=".MainActivity">

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?themeColorPrimary">

        <LinearLayout android:id="@+id/linear1"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:padding="8dp"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">


            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center_vertical|center_horizontal">

                <TextView android:id="@+id/textViewTitle"
                          android:layout_height="wrap_content"
                          android:padding="8dp"
                          android:text="@string/textViewTitle_text"
                          android:gravity="center_vertical|center_horizontal"
                          android:textSize="20sp"
                          android:textStyle="bold|italic"
                          android:textColor="?themeColorText" android:layout_width="wrap_content"
                          android:textAlignment="center"/>
                <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/baseline_settings_white_48"
                        android:id="@+id/imageButton"
                        android:contentDescription="@string/settingsBtn_description"
                        android:background="?themeColorPrimary"
                        android:onClick="clickSettingsBtn"/>


            </LinearLayout>


            <TextView android:id="@+id/textViewOutput"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:padding="8dp"
                      android:background="?themeColorBright"
                      android:gravity="center_vertical|center_horizontal"
                      android:text="@string/textViewOutput_text"
                      android:textSize="12sp"
                      android:textColor="?themeColorText"
                      android:layout_weight="5"/>

            <Button android:id="@+id/flipFlashcard"
                    style="@style/button_style"
                    android:text="@string/flipFlashcard_text"
                    android:onClick="clickFlipFlashcard"/>

            <Button android:id="@+id/newFlashcard"
                    style="@style/button_style"
                    android:text="@string/newFlashcard_text"
                    android:onClick="clickNewFlashcard"/>

            <Button android:id="@+id/SelectFile"
                    style="@style/button_style"
                    android:text="@string/selectFile_text"
                    android:onClick="clickSelectFile"/>
        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>