<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateCards">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="?themeColorPrimary">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_space"/>

            <!--Top Element in scroll view -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_option_height">
                <android.support.v7.widget.AppCompatImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?themeColorPrimary"
                        android:src="@drawable/baseline_arrow_back_24"
                        android:onClick="backButtonPress"/>
                <TextView android:id="@+id/textViewTitle"
                          style="@style/title_style"
                          android:text="@string/menu_NewCards" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView android:id="@+id/textViewFileURL"
                          android:text="@string/noFileSelected_text"
                          style="@style/textViewStyle"/>

                <LinearLayout
                        android:layout_width="@dimen/button_size"
                        android:layout_height="wrap_content">

                    <Button android:id="@+id/buttonSelectFile"
                            android:text="@string/selectFile_text"
                            style="@style/button_style"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_space"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <EditText android:id="@+id/editTextTerm"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:inputType="textMultiLine"
                          android:ems="10"
                          android:layout_weight="1"
                          tools:ignore="Autofill"
                          android:hint="@string/termHint"/>

                <EditText android:id="@+id/editTextDef"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:inputType="textMultiLine"
                          android:ems="10"
                          android:layout_weight="1"
                          tools:ignore="Autofill"
                          android:hint="@string/defHint"/>

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_space"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="@dimen/button_size"
                        android:layout_height="wrap_content">

                    <Button android:id="@+id/buttonPrevious"
                            android:text="@string/selectFile_text"
                            style="@style/button_style"
                            android:width="@dimen/button_size"/>

                </LinearLayout>

                <TextView android:id="@+id/textViewNumber"
                          android:text="@string/flashcardNumber"
                          style="@style/textViewStyle"
                          android:gravity="center_vertical|center_horizontal"/>

                <LinearLayout
                        android:layout_width="@dimen/button_size"
                        android:layout_height="wrap_content">

                    <Button android:id="@+id/buttonNext"
                            android:text="@string/buttonNext_text"
                            style="@style/button_style"
                            android:width="@dimen/button_size"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_space"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView android:id="@+id/textViewFileData"
                          android:text="@string/noFileSelected_text"
                          style="@style/textViewStyle"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView android:id="@+id/nav_view"
                                                  android:layout_width="wrap_content"
                                                  android:layout_height="match_parent"
                                                  android:layout_gravity="start"
                                                  app:menu="@menu/drawer_view"
                                                  app:headerLayout="@layout/nav_header"
                                                  android:fitsSystemWindows="true"/>
</android.support.v4.widget.DrawerLayout>